물건 전체 조회시에 권한이 판매자 이거나 관리자 이면 수정과 삭제 버튼이 보이게 만들었다.

--- a/ksmart_layout1/src/main/resources/templates/goods/glist/goodsList.html
+++ b/ksmart_layout1/src/main/resources/templates/goods/glist/goodsList.html
@@ -34,9 +34,10 @@
 			<td>상품색상</td>			
 			<td>상품크기</td>	
 			<td>상품등록날짜</td>
-			<td>상품상세설명</td>		
-			<td>수정</td>
-			<td>삭제</td>
+			<td>상품상세설명</td>
+			<td th:if="${session.S_LEVEL eq '판매자' || session.S_LEVEL eq '관리자'}">수정</td>
+			<td th:if="${session.S_LEVEL eq '판매자' || session.S_LEVEL eq '관리자'}">삭제</td>
+
 		</tr>
 		<tr th:each="g: ${goodsList}">
 			<td th:text="${g.memberId}"></td>
@@ -52,11 +53,11 @@
 			<td th:text="${g.goodsSize}"></td>
 			<td th:text="${g.goodsDate}"></td>
 			<td th:text="${g.goodsDesc}"></td>
-			<td>
+			<td th:if="${session.S_LEVEL eq '판매자' || session.S_LEVEL eq '관리자'}">
 				<!-- /modifyMember?memberId="값" -->
 				<a th:href="@{/modifyGoods(goodsCode=${g.goodsCode})}">수정</a>
-			</td>
-			<td>
+			</td >
+			<td th:if="${session.S_LEVEL eq '판매자' || session.S_LEVEL eq '관리자'}">
 				<a th:href="@{/delGoods(goodsCode=${g.goodsCode})}">삭제</a>
 			</td>
 		</tr>
